# Personal-finance-tracker

./: .docstr.yaml  .gitignore  README.md  conftest.py  coverage.ini  pyproject.toml  redis-docker-compose.yml
.github/workflows/: main.yaml
alembic/: env.py
alembic/versions/: 2025_04_23_2209-b4c86e7faefd_create_finacial_records_table.py  2025_04_30_2121-0713bf0c584d_users_table.py  2025_04_30_2121-0713bf0c584d_таблица_пользователей.py  2025_05_01_1652-aced2b249851_create_categories_table.py  2025_05_01_1953-b603996f3a4f_fill_categories_with_init_data.py  2025_05_01_2051-1e0c8776f623_table_financial_records.py  2025_05_06_1505-bd295f8c1f83_add_relationship_btw_user_and_category.py
src/app/: config.py
src/app/api/: main.py
src/app/api/categories/: crud.py  schemas.py  views.py
src/app/api/financial_records/: crud.py  schemas.py  utils.py  views.py
src/app/api/users/: crud.py  redis_utils.py  schemas.py  utils.py  views.py
src/app/database/: db_helper.py  models.py
src/app/frontend/: api_helpers.py  auth_page.py  components.py  crud_page.py  main.py  records_page.py
src/app/redis/: redis_helper.py
src/tests/api/categories/: test_crud_categories.py
src/tests/api/financial_records/: test_crud_records.py
src/tests/api/users/: test_crud_users.py  test_redis_utils.py
src/tests/frontend/: test_api_helpers.py  test_auth_page.py
