[project]
name = "personal-finance-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Angelika2707",email = "53828140+Angelika2707@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standart] (>=0.34.2,<0.35.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "sqlalchemy[asycio] (>=2.0.40,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
